# MagmaKernel

./: CMakeLists.txt  Collection.c  Collection.h  Throwable.c  Throwable.h  app.c  app.h  assertions.c  assertions.h  collections.c  collections.h  core.c  core.h  lang.c  lang.h  main.c  primitives.c  primitives.h  test.c  test.h
